--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src",
     "dev-docs": "vuepress dev docs",
+    "build": "node build/build.js",
     "build-docs": "vuepress build docs"
   },
   "dependencies": {
@@ -18,6 +17,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/babel-preset-app": "^4.4.6",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -44,6 +44,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -56,6 +57,7 @@
     "sass-loader": "^7.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
